# Fitness-Club-Page

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
back-end/common/: permissions.py
back-end/workout_auth/: urls.py  views.py
back-end/workout_tracker/: urls.py
front-end/: package.json  pnpm-lock.yaml
front-end/src/: App.tsx  index.css  main.tsx
front-end/src/components/: ActiveSection.tsx  Hero.tsx  Logout.tsx  Navbar.tsx  ProtectedRoute.tsx  RegistrationForm.tsx  Services.tsx  index.ts  theme-toggle.tsx
front-end/src/domain/: const.ts  types.ts
front-end/src/pages/: Index.tsx  Login.tsx  Register.tsx  index.ts
src/: App.tsx  index.css
src/components/: ActiveSection.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  Services.tsx  SuscribeSection.tsx  Testimonials.tsx  Trainers.tsx
src/pages/: Index.tsx  Login.tsx  Register.tsx
workout_tracker/: Procfile  pyproject.toml
workout_tracker/common/: exceptions.py  permissions.py
workout_tracker/tests/common/: test_exceptions.py
workout_tracker/tests/workoutplan/repositories/: test_workout_plan_repository.py
workout_tracker/workout_auth/: serializers.py  urls.py  views.py
workout_tracker/workout_tracker/: settings.py  urls.py
workout_tracker/workoutplan/: admin.py  exceptions.py  models.py  permissions.py  serializers.py  urls.py  views.py
workout_tracker/workoutplan/controllers/: workout_plan_controller.py
workout_tracker/workoutplan/repositories/: workout_plan_repository.py
workout_tracker/workoutplan/services/: workout_plan_service.py
(+57 files in other folders)
