[project]
name = "workout-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1.6",
    "djangorestframework>=3.15.2",
    "djangorestframework-simplejwt>=5.4.0",
]

[project.optional-dependencies]
types-stubs = [
    "django-stubs>=5.1.3",
    "django-types>=0.20.0",
    "djangorestframework-stubs>=3.15.3",
    "djangorestframework-types>=0.9.0",
]


[dependency-groups]
dev = [
    "ruff>=0.9.7",
]
